# htmx-infinite-scroll-gallery

./: Cargo.toml  Dockerfile  README.md  fly.toml  input.css  tailwind.config.js
src/: main.rs
static/: output.css
