[package]
name = "infinite-scroll-images"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
leptos = { version = "0.4.4", features = ["ssr"] }
leptos_meta = { version = "0.4.4", features = ["ssr"] }
rand = "0.8.5"
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.1" , features = ["fs", "trace"] }

[[bin]]
name = "htmx-gallery"
path = "src/main.rs"
